[58461] feat: dynamic size of threshold, code review